--- a/iOS/Views/RepositoryTableViewCell.xib
+++ b/iOS/Views/RepositoryTableViewCell.xib
@@ -6,27 +6,169 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="RepositoryTableViewCell" textLabel="VUJ-Zl-vGC" style="IBUITableViewCellStyleDefault" id="KGk-i7-Jjw" customClass="RepositoryTableViewCell" customModule="iOS" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="RepositoryTableViewCell" rowHeight="140" id="KGk-i7-Jjw" customClass="RepositoryTableViewCell" customModule="iOS" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="140"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="139"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="VUJ-Zl-vGC">
-                        <rect key="frame" x="15" y="0.0" width="290" height="43"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ropository name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qGW-Bf-zti">
+                        <rect key="frame" x="8" y="8" width="216" height="25"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="25" id="E91-GZ-bs6"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="18"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cL2-Yn-bZm">
+                        <rect key="frame" x="232" y="8" width="80" height="80"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="swift" translatesAutoresizingMaskIntoConstraints="NO" id="3lP-Xg-2lN">
+                                <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="80" id="3jQ-Rl-308"/>
+                                    <constraint firstAttribute="height" constant="80" id="qGy-RS-NDI"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="4"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </imageView>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zZm-8j-9uQ">
+                                <rect key="frame" x="8" y="52" width="64" height="20"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.34511451198630139" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="EoR-iU-SKg"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="10"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                                <color key="shadowColor" red="0.0" green="0.0" blue="0.0" alpha="0.20000000000000001" colorSpace="calibratedRGB"/>
+                                <size key="shadowOffset" width="-1" height="1"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="4"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="80" id="3St-uu-EMO"/>
+                            <constraint firstItem="zZm-8j-9uQ" firstAttribute="leading" secondItem="cL2-Yn-bZm" secondAttribute="leading" constant="8" id="6QB-tJ-GtX"/>
+                            <constraint firstAttribute="width" constant="80" id="6qb-XJ-l29"/>
+                            <constraint firstItem="3lP-Xg-2lN" firstAttribute="centerX" secondItem="cL2-Yn-bZm" secondAttribute="centerX" id="S8K-h5-rAx"/>
+                            <constraint firstItem="3lP-Xg-2lN" firstAttribute="centerY" secondItem="cL2-Yn-bZm" secondAttribute="centerY" id="WPn-uh-Yue"/>
+                            <constraint firstAttribute="bottom" secondItem="zZm-8j-9uQ" secondAttribute="bottom" constant="8" id="bV4-2c-L7B"/>
+                            <constraint firstAttribute="trailing" secondItem="zZm-8j-9uQ" secondAttribute="trailing" constant="8" id="egE-Jx-CSF"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <real key="value" value="4"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </view>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oRB-Ne-lul">
+                        <rect key="frame" x="8" y="41" width="216" height="47"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="47" id="2ow-M0-cM3"/>
+                        </constraints>
+                        <string key="text">Aenean placerat. In vulputate urna eu arcu. Aliquam erat volutpat. Suspendisse potenti. Morbi mattis felis at nunc. Duis viverra diam non justo. In nisl. Nullam sit amet magna in magna gravida vehicula. Mauris tincidunt sem sed arcu. </string>
+                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="13"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="F7z-l1-wsF">
+                        <rect key="frame" x="0.0" y="96" width="160" height="36"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="XrC-Ir-swO">
+                                <rect key="frame" x="8" y="10" width="42.5" height="15"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="fork" translatesAutoresizingMaskIntoConstraints="NO" id="Jm0-W3-64l">
+                                        <rect key="frame" x="0.0" y="0.0" width="15" height="15"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="15" id="BWH-Md-Sqp"/>
+                                            <constraint firstAttribute="width" constant="15" id="eyV-ws-VP2"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WhL-rU-Olg">
+                                        <rect key="frame" x="23" y="1" width="19.5" height="13.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="XrC-Ir-swO" firstAttribute="leading" secondItem="F7z-l1-wsF" secondAttribute="leading" constant="8" id="8ZV-jH-B1s"/>
+                            <constraint firstItem="XrC-Ir-swO" firstAttribute="centerY" secondItem="F7z-l1-wsF" secondAttribute="centerY" id="OLR-kX-KRi"/>
+                        </constraints>
+                    </view>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="82P-FP-DbO">
+                        <rect key="frame" x="160" y="96" width="160" height="36"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="9U5-eO-3tE">
+                                <rect key="frame" x="109.5" y="10" width="42.5" height="15"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OT7-gD-hiy">
+                                        <rect key="frame" x="0.0" y="1" width="19.5" height="13.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star" translatesAutoresizingMaskIntoConstraints="NO" id="z3S-Jc-ywU">
+                                        <rect key="frame" x="27.5" y="0.0" width="15" height="15"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="15" id="D60-cc-bLT"/>
+                                            <constraint firstAttribute="height" constant="15" id="wDL-Ik-Tn0"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="9U5-eO-3tE" firstAttribute="centerY" secondItem="82P-FP-DbO" secondAttribute="centerY" id="Xc0-s2-NEm"/>
+                            <constraint firstAttribute="trailing" secondItem="9U5-eO-3tE" secondAttribute="trailing" constant="8" id="j6q-ag-IOf"/>
+                        </constraints>
+                    </view>
                 </subviews>
+                <constraints>
+                    <constraint firstItem="F7z-l1-wsF" firstAttribute="top" secondItem="82P-FP-DbO" secondAttribute="top" id="AGy-6H-YE3"/>
+                    <constraint firstItem="qGW-Bf-zti" firstAttribute="leading" secondItem="oRB-Ne-lul" secondAttribute="leading" id="BGj-w7-k4S"/>
+                    <constraint firstAttribute="trailing" secondItem="cL2-Yn-bZm" secondAttribute="trailing" constant="8" id="CcX-IR-bdN"/>
+                    <constraint firstAttribute="trailing" secondItem="82P-FP-DbO" secondAttribute="trailing" id="HHa-Yx-bsW"/>
+                    <constraint firstItem="cL2-Yn-bZm" firstAttribute="leading" secondItem="oRB-Ne-lul" secondAttribute="trailing" constant="8" id="Sb0-RX-FPj"/>
+                    <constraint firstItem="qGW-Bf-zti" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="So1-g2-zv3"/>
+                    <constraint firstItem="82P-FP-DbO" firstAttribute="leading" secondItem="F7z-l1-wsF" secondAttribute="leading" constant="160" id="ao2-wf-saI"/>
+                    <constraint firstItem="cL2-Yn-bZm" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="chD-hg-Gi8"/>
+                    <constraint firstItem="cL2-Yn-bZm" firstAttribute="leading" secondItem="qGW-Bf-zti" secondAttribute="trailing" constant="8" id="f6P-iG-OHX"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="F7z-l1-wsF" secondAttribute="bottom" constant="-1" id="g72-AK-4v7"/>
+                    <constraint firstItem="F7z-l1-wsF" firstAttribute="top" secondItem="oRB-Ne-lul" secondAttribute="bottom" constant="8" id="gSf-9p-DWA"/>
+                    <constraint firstItem="oRB-Ne-lul" firstAttribute="top" secondItem="qGW-Bf-zti" secondAttribute="bottom" constant="8" symbolic="YES" id="mS6-uS-iui"/>
+                    <constraint firstItem="F7z-l1-wsF" firstAttribute="bottom" secondItem="82P-FP-DbO" secondAttribute="bottom" id="rXo-s6-mgA"/>
+                    <constraint firstItem="qGW-Bf-zti" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="uQl-AF-g4o"/>
+                    <constraint firstItem="F7z-l1-wsF" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="w0p-LZ-1f5"/>
+                    <constraint firstItem="82P-FP-DbO" firstAttribute="leading" secondItem="F7z-l1-wsF" secondAttribute="trailing" id="weJ-Zn-PIf"/>
+                </constraints>
             </tableViewCellContentView>
+            <point key="canvasLocation" x="34" y="104"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="fork" width="40" height="40"/>
+        <image name="star" width="40" height="40"/>
+        <image name="swift" width="600" height="600"/>
+    </resources>
 </document>
