--- a/iOS/Views/ListRepositoriesViewController.xib
+++ b/iOS/Views/ListRepositoriesViewController.xib
@@ -11,6 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ListRepositoriesViewController" customModule="iOS" customModuleProvider="target">
             <connections>
+                <outlet property="error" destination="8zT-2x-uEi" id="ycn-8X-JCz"/>
                 <outlet property="tableView" destination="HuM-hX-B9A" id="0kT-Uf-qx0"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -24,11 +25,23 @@
                     <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </tableView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8zT-2x-uEi">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                    <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.95686274509803915" alpha="1" colorSpace="calibratedRGB"/>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                    <color key="textColor" red="0.74762727281403629" green="0.74666917755974882" blue="0.76340471518221242" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <nil key="highlightedColor"/>
+                    <size key="shadowOffset" width="-1" height="3"/>
+                </label>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="HuM-hX-B9A" secondAttribute="trailing" id="7wl-Uf-J4m"/>
                 <constraint firstAttribute="bottom" secondItem="HuM-hX-B9A" secondAttribute="bottom" id="Bnh-uB-xKF"/>
+                <constraint firstItem="8zT-2x-uEi" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="EEI-gC-gu5"/>
+                <constraint firstItem="8zT-2x-uEi" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="FYG-Re-2fZ"/>
+                <constraint firstAttribute="bottom" secondItem="8zT-2x-uEi" secondAttribute="bottom" id="glI-ye-rnr"/>
+                <constraint firstAttribute="trailing" secondItem="8zT-2x-uEi" secondAttribute="trailing" id="lls-um-5gJ"/>
                 <constraint firstItem="HuM-hX-B9A" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="vg1-pc-2zO"/>
                 <constraint firstItem="HuM-hX-B9A" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="wAG-ho-Z3b"/>
             </constraints>
