Created cell and display data

--- a/iOS/Views/RepositoryTableViewCell.xib
+++ b/iOS/Views/RepositoryTableViewCell.xib
@@ -168,7 +168,7 @@
                     <constraint firstItem="82P-FP-DbO" firstAttribute="leading" secondItem="F7z-l1-wsF" secondAttribute="leading" constant="160" id="ao2-wf-saI"/>
                     <constraint firstItem="cL2-Yn-bZm" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="chD-hg-Gi8"/>
                     <constraint firstItem="cL2-Yn-bZm" firstAttribute="leading" secondItem="qGW-Bf-zti" secondAttribute="trailing" constant="8" id="f6P-iG-OHX"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="F7z-l1-wsF" secondAttribute="bottom" constant="-1" id="g72-AK-4v7"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="F7z-l1-wsF" secondAttribute="bottom" id="g72-AK-4v7"/>
                     <constraint firstItem="F7z-l1-wsF" firstAttribute="top" secondItem="oRB-Ne-lul" secondAttribute="bottom" constant="8" id="gSf-9p-DWA"/>
                     <constraint firstAttribute="trailing" secondItem="qn6-Qr-BEm" secondAttribute="trailing" id="j5n-Oq-9OB"/>
                     <constraint firstItem="oRB-Ne-lul" firstAttribute="top" secondItem="qGW-Bf-zti" secondAttribute="bottom" constant="8" symbolic="YES" id="mS6-uS-iui"/>
