--- a/iOS/Views/DetailRepositoryViewController.xib
+++ b/iOS/Views/DetailRepositoryViewController.xib
@@ -11,6 +11,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DetailRepositoryViewController" customModule="iOS" customModuleProvider="target">
             <connections>
+                <outlet property="error" destination="4rj-gy-Vce" id="rle-cp-a3P"/>
+                <outlet property="tableView" destination="V8L-Kr-PQf" id="a12-tf-NEb"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
