--- a/iOS/Base/Base.lproj/LaunchScreen.storyboard
+++ b/iOS/Base/Base.lproj/LaunchScreen.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -21,18 +22,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bookmark" translatesAutoresizingMaskIntoConstraints="NO" id="XhZ-EY-a9t">
-                                <rect key="frame" x="0.0" y="-24" width="100" height="100"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bookmark" translatesAutoresizingMaskIntoConstraints="NO" id="94L-70-G2N">
+                                <rect key="frame" x="0.0" y="-1" width="375" height="230"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="100" id="Uxj-Ea-s2V"/>
-                                    <constraint firstAttribute="height" constant="100" id="ZzG-7p-Cqc"/>
+                                    <constraint firstAttribute="height" constant="230" id="vfa-LL-11F"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.1819814891" green="0.69426733259999995" blue="0.53024792669999998" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="XhZ-EY-a9t" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="Gc9-GH-uqa"/>
-                            <constraint firstItem="XhZ-EY-a9t" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" constant="-24" id="f5o-Mx-xua"/>
+                            <constraint firstItem="94L-70-G2N" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="EgN-2g-SDd"/>
+                            <constraint firstItem="94L-70-G2N" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="topMargin" constant="-1" id="IbN-lx-Z4m"/>
+                            <constraint firstAttribute="trailing" secondItem="94L-70-G2N" secondAttribute="trailing" id="LLr-D1-KKH"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -42,6 +43,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="bookmark" width="76" height="76"/>
+        <image name="bookmark" width="186" height="381"/>
     </resources>
 </document>
