--- a/iOS/Views/DetailRepository/DetailRepositoryTableViewCell.xib
+++ b/iOS/Views/DetailRepository/DetailRepositoryTableViewCell.xib
@@ -16,7 +16,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="140"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="139"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="139.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ropository name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bZ3-TR-Mao">
@@ -44,7 +44,7 @@
                             <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Jfg-bs-k3T">
                                 <rect key="frame" x="8" y="1" width="81.5" height="40"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="calendar" translatesAutoresizingMaskIntoConstraints="NO" id="Ewo-IA-XES">
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Calendar" translatesAutoresizingMaskIntoConstraints="NO" id="Ewo-IA-XES">
                                         <rect key="frame" x="0.0" y="0.0" width="15" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="15" id="LIS-Pg-9tA"/>
@@ -159,6 +159,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="calendar" width="40" height="40"/>
+        <image name="Calendar" width="40" height="40"/>
     </resources>
 </document>
